--- a/appsettings.json
+++ b/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=YourDatabaseName;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Host=localhost;Database=measurements;Username=udef;Password=1234;Trusted_Connection=True;MultipleActiveResultSets=true;"
   },
   "Logging": {
     "LogLevel": {
