--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Host=localhost;Database=measurements;Username=msm;Password=vxm120brb;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
