--- a/MyApi.csproj
+++ b/MyApi.csproj
@@ -25,6 +25,9 @@
     <None Update="certs\server.key">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+    <None Update="certs\server.pfx">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
